--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "remix-image",
-  "version": "0.3.16",
+  "name": "@simonlc/remix-image",
+  "version": "0.4.0",
   "description": "A React component for responsive images in Remix",
   "author": "Josh McFarlin <josh@mcfarl.in>",
   "license": "MIT",
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
+    "image-size": "^1.0.1",
     "is-svg": "^4.3.2",
     "js-image-lib": "^0.1.6",
     "lru-cache": "^7.4.0",
