--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@simonlc/remix-image",
-  "version": "0.5.3",
+  "version": "0.5.9",
   "description": "A React component for responsive images in Remix",
   "author": "Josh McFarlin <josh@mcfarl.in>",
   "license": "MIT",
@@ -54,6 +54,7 @@
     "image-size": "^1.0.1",
     "is-svg": "^4.3.2",
     "js-image-lib": "^0.1.6",
+    "lodash": "^4.17.21",
     "lru-cache": "^7.4.0",
     "mime-tree": "^0.1.4",
     "query-string": "^7.1.0",
@@ -82,6 +83,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.181",
     "@types/lru-cache": "^7.4.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
